# mkproject

./: .eslintrc.yml  .gitignore  .project  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  readme.md  release.config.js  setup.cfg  setup.py
.github/workflows/: python-package.yml  release.yaml
frontend/: package-lock.json  package.json
frontend/config/: paths.js  webpack.config.js
frontend/src/: App.js
src/: index.js  main.py
src/cli/: ArgumentParser.js  Prompt.js  Title.js  index.js
src/mkreadme/: mkreadme.py
src/readme/: Acknowledgement.js  AggregatedDocument.js  Badge.js  DocumentBuilder.js  FileWriter.js  Installation.js  Markup.js  Project.js  Support.js  Visual.js  index.js
src/readme/sections/: Contributing.js  Description.js  License.js  Roadmap.js  SectionBuilder.js  Title.js  Usage.js  Visual.js
