[metadata]
name = mkreadme
description = Create a readme according to your needs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://
author = Yannick Rehberger
author_email = yr@ityreh.de
maintainer = Yannick Rehberger
maintainer_email = yr@ityreh.de
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = setuptools, readme, documentation, http
project_urls =
    Source=https://github.com/ityreh/mkreadme
    Tracker=https://github.com/ityreh/mkreadme/issues

[options]
packages = find:
install_requires =
    Flask>=1.1.2,<2
python_requires = >=3.7
package_dir =
    =src
